fixed overflow on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ span {
 
 .erp-banner {
   margin-top: 50px;
+  width: 100%;
 }
 
 #contact {
